--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
 	},
 	"keywords": [],
 	"dependencies": {
+		"@aws-sdk/abort-controller": "^3.310.0",
+		"@aws-sdk/client-s3": "^3.319.0",
 		"@dicebear/avatars": "^3.1.4",
 		"@dicebear/avatars-bottts-sprites": "^1.1.4",
 		"@types/cache-manager": "^3.4.0",
@@ -33,12 +35,14 @@
 		"@types/jsonwebtoken": "^8.5.0",
 		"@types/mongoose": "^5.10.3",
 		"@types/mongoose-delete": "^0.5.2",
+		"@types/multer": "^1.4.7",
+		"@types/multer-s3": "^3.0.0",
 		"@types/passport-local": "^1.0.33",
 		"@types/redis": "^2.8.28",
 		"async": "^3.2.0",
 		"async-lock": "^1.2.6",
 		"atob": "^2.1.2",
-		"aws-sdk": "2.614.0",
+		"aws-sdk": "^2.614.0",
 		"axios": "^0.21.0",
 		"bluebird": "3.5.1",
 		"body-parser": "^1.18.2",
@@ -62,6 +66,7 @@
 		"express-validation": "1.0.2",
 		"express-winston": "^4.0.4",
 		"helmet": "^4.2.0",
+		"html-pdf": "^3.0.1",
 		"http-status": "1.0.1",
 		"joi": "17.3.0",
 		"js-video-url-parser": "^0.4.3",
@@ -73,6 +78,8 @@
 		"mongoose": "5.10.0",
 		"mongoose-delete": "^0.5.3",
 		"mongoose-hidden": "^1.9.0",
+		"multer": "^1.4.5-lts.1",
+		"multer-s3": "^3.0.1",
 		"node-fetch": "^2.6.1",
 		"node-schedule": "^1.3.2",
 		"nodemailer": "^4.6.8",
@@ -89,7 +96,7 @@
 		"redis": "^3.1.2",
 		"request": "^2.88.2",
 		"sanitize-filename": "^1.6.3",
-		"socket.io-client": "4.5.2",
+		"socket.io-client": "^4.5.2",
 		"stoppable": "^1.1.0",
 		"typescript": "~4.2.0",
 		"uuid": "^8.3.2",
